<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.LockScreenPasswordActivity">

    <data>
        <variable
                name="viewmodel"
                type="com.atif.qamar.securepassword.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/secure_password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


        <ImageView
                android:id="@+id/img_password"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_background"
                android:contentDescription="TODO"
                android:padding="10dp"
                android:src="@drawable/ic_no_password_manager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_mesg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/lock_screen_message"
                app:layout_constraintTop_toBottomOf="@+id/img_password" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_passowrd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/label_password"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/tv_mesg"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:text="@={viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_unlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/green_button_background"
                android:onClick="@{() -> viewmodel.login()}"
                android:text="@string/unlock"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_passowrd"
                tools:ignore="MissingConstraints" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_bottom_bg"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>