<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.PasswordGeneratorFragment">

    <data>

        <variable
                name="viewmodel"
                type="com.atif.qamar.securepassword.viewmodel.PasswordGeneratorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_constraint_top"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                tools:ignore="MissingConstraints">

            <TextView
                    android:id="@+id/lb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_password"
                    android:textColor="@color/green2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                    android:id="@+id/img_copy"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/textview_background"
                    android:contentDescription="TODO"
                    android:padding="10dp"
                    android:src="@drawable/ic_content_copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@{viewmodel.password}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lb_password" />


            <com.google.android.material.button.MaterialButton

                    android:id="@+id/tv_passwordGen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/green_button_background"
                    android:fontFamily="monospace"
                    android:onClick="@{() -> viewmodel.generatePassword()}"
                    android:text="@string/text_generate"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_copy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/layout_constraint_top"
                tools:ignore="MissingConstraints">

            <TextView
                    android:id="@+id/lb_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_include_following"
                    android:textColor="@color/green2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                    android:id="@+id/checkbox_alp_lower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:checked="@={viewmodel.lowerCaseRequired}"
                    android:text="@string/lb_alp_lower"
                    app:layout_constraintTop_toBottomOf="@+id/lb_title"
                    app:useMaterialThemeColors="false" />

            <CheckBox
                    android:id="@+id/checkbox_alp_upper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="@={viewmodel.upperCaseRequired}"
                    android:text="@string/lb_alp_upper"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_alp_lower"
                    app:useMaterialThemeColors="false" />

            <CheckBox
                    android:id="@+id/checkbox_digits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="@={viewmodel.digitRequired}"
                    android:text="@string/lb_digit"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_alp_upper"
                    app:useMaterialThemeColors="false" />

            <CheckBox
                    android:id="@+id/checkbox_special_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:checked="@={viewmodel.specialCharRequired}"
                    android:text="@string/lb_special_char"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_digits"
                    app:useMaterialThemeColors="false" />

            <TextView
                    android:id="@+id/lb_pwd_title_len"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:text="@{@string/password_lenght_mesg(viewmodel.progressLiveData)}"
                    android:textColor="@color/green2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_special_char" />

            <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:max="32"
                    android:onProgressChanged="@{(seekBar, progress, fromUser) -> viewmodel.updateEditText(progress)}"
                    android:progress="@{viewmodel.onEditTextTyped}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lb_pwd_title_len" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>