<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.PasswordManagerAddFragment">

    <data>
        <import type="android.view.View" />
        <variable
                name="viewmodel"
                type="com.atif.qamar.securepassword.viewmodel.PasswordManagerAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_type"

                    tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                        android:id="@+id/filled_pwd_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:onTextChanged="@{viewmodel.onTextChanged}"
                        android:text="@={viewmodel.typeCategory}"
                        tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_constraint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_type"
                    tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_dropdown"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name"
                        android:visibility="@{viewmodel.textInputDropdown ? View.VISIBLE : View.GONE}"
                        tools:ignore="MissingConstraints">

                    <AutoCompleteTextView
                            android:id="@+id/filled_pwd_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:text="@={viewmodel.title}"
                            tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_title"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_title"
                        android:visibility="@{viewmodel.textInputTitle ? View.VISIBLE : View.GONE}"
                        tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewmodel.title_}" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/label_username"
                    app:layout_constraintTop_toBottomOf="@+id/layout_constraint_title"
                    tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/label_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username"
                    tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_url"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/label_url"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
                    tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{viewmodel.textInputTitle}"
                        android:text="@={viewmodel.url}" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>