<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.PasswordGeneratorFragment">

    <data>
        <variable
                name="viewmodel"
                type="com.atif.qamar.securepassword.viewmodel.PasswordChangeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_old_passowrd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/label_oldpassword"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="10dp"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:text="@={viewmodel.oldPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_passowrd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/label_password"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_old_passowrd"
                app:layout_goneMarginTop="10dp"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:text="@={viewmodel.newPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_repassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/label_re_enter_password"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_passowrd"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:text="@={viewmodel.reNewPasswotrd}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/gradient_green"
                android:onClick="@{() ->viewmodel.updatePassword()}"
                android:text="@string/change_password"
                app:layout_constraintTop_toBottomOf="@+id/textinput_repassword"
                tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>