<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp">


        <TextView
                android:id="@+id/lbl_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:fontFamily="@font/montserrat"
                android:text="@string/label_type_"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_type"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray_text"
                android:textSize="15sp" />

        <View
                android:id="@+id/view_one"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/tvType"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark" />

        <TextView
                android:id="@+id/lbl_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_one"
                android:layout_marginTop="20dip"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_title"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_title"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_text"
                android:textSize="15sp" />


        <View
                android:id="@+id/view_two"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark" />


        <TextView
                android:id="@+id/lbl_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_two"
                android:layout_marginTop="20dip"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_username"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_username"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_text"
                android:textSize="15sp" />


        <View
                android:id="@+id/view_four"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_username"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark" />


        <TextView
                android:id="@+id/lbl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_four"
                android:layout_marginTop="20dip"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_password"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_password"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_text"
                android:textSize="15sp" />


        <ImageView
                android:id="@+id/img_copy"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@+id/view_four"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="22dp"
                android:background="@drawable/textview_background"
                android:padding="10dp"
                android:src="@drawable/ic_content_copy" />

        <View
                android:id="@+id/view_three"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_password"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark" />

        <TextView
                android:id="@+id/lbl_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_three"
                android:layout_marginTop="20dip"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_url"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_url"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dip"
                android:textColor="@color/gray_text"
                android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>

